--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "devDependencies": {
     "@types/node": "18.11.10",
+    "postcss-preset-env": "^7.8.3",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3"
   }
 }
